Re-add core folder

--- a/home/templates/add.html
+++ b/home/templates/add.html
@@ -32,21 +32,22 @@
             <h2>Add Recipe</h2>
             <hr>
             <div class="mb-3">
-                <label for="receipe_name" class="form-label">Recipe Name</label>
-                <input name="receipe_name" type="text" class="form-control" required>
+                <label for="recipe_name" class="form-label">Recipe Name</label>
+                <input name="recipe_name" type="text" class="form-control" required>
             </div>
             <div class="mb-3">
-                <label for="receipe_disc" class="form-label">Recipe Description</label>
-                <textarea name="receipe_disc" class="form-control" required></textarea>
+                <label for="recipe_dis" class="form-label">Recipe Description</label>
+                <textarea name="recipe_dis" class="form-control" required></textarea>
             </div>
             <div class="mb-3">
-                <label for="receipe_image" class="form-label">Recipe Image</label>
-                <input name="receipe_image" type="file" class="form-control">
+                <label for="recipe_image" class="form-label">Recipe Image</label>
+                <input name="recipe_image" type="file" class="form-control">
             </div>
             <button type="submit" class="btn btn-success">Add Recipe</button>
         </form>
 
-        
-
-       </body>
+       
+        <!-- Recipe Table -->
+            
+            </body>
 {%endblock%}
